--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "private": true,
-  "homepage": "https://gitname.github.io/Portfolio",
+  "homepage": "https://alexandernovo.github.io/Portfolio",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
